Add folderId filtering.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=4000
 API_KEY=
 CREDENTIALS=./credentials.json
+FOLDER_IDS=1ns4BJm0eGabFuDO7ZtSLC1wE22r4YIgE
 IMAGE_DIR=./pico_frame_images/
 IMAGE_EXTS=.png,.jpg,.jpeg
