--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,20 @@
+# Port the server listens to
 PORT=4000
+
+# API Key protecting the endpoints
 API_KEY=
+
+# Path to Google Cloud Service Account credentials
+# (see below)
 CREDENTIALS=./credentials.json
-FOLDER_IDS=1ns4BJm0eGabFuDO7ZtSLC1wE22r4YIgE
+
+# Google Drive folder ids to look in.
+# If this is empty then the server will download
+# anything shared with the google service account
+FOLDER_IDS=
+
+# Path to save images to
 IMAGE_DIR=./pico_frame_images/
+
+# Image file extensions
 IMAGE_EXTS=.png,.jpg,.jpeg
