Filter google drive files by mime type

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,5 @@ FOLDER_IDS=
 # Path to save images to
 IMAGE_DIR=./pico_frame_images/
 
-# Image file extensions
-IMAGE_EXTS=.png,.jpg,.jpeg
+# Supported image mime types
+IMAGE_MIME_TYPES=image/jpeg,image/png,image/gif,image/bmp
