Allow configuring image height and width

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,9 @@ IMAGE_DIR=./pico_frame_images/
 
 # Supported image mime types
 IMAGE_MIME_TYPES=image/jpeg,image/png,image/gif,image/bmp
+
+# Image height
+IMAGE_HEIGHT=480
+
+# Image width
+IMAGE_WIDTH=800
