Add config for syncing photos

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ IMAGE_HEIGHT=480
 
 # Image width
 IMAGE_WIDTH=800
+
+# cron schedule for syncing photos
+# See https://crontab.guru/#*/5_*_*_*_*
+SYNC_DRIVE_SCHEDULE="*/5 * * * *"
