--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@googleapis/drive": "^8.3.1",
     "dotenv-flow": "^3.3.0",
+    "env-var": "^7.4.1",
     "express": "^4.18.2",
     "node-cron": "^3.0.2",
     "react": "^18.2.0",
