--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,9 @@ IMAGE_HEIGHT=480
 # Image width
 IMAGE_WIDTH=800
 
-# cron schedule for syncing photos
+# cron schedule for syncing drive files.
 # See https://crontab.guru/#*/5_*_*_*_*
 SYNC_DRIVE_SCHEDULE="*/5 * * * *"
+
+# Whether to sync drive on start up
+SYNC_DRIVE_IMMEDIATELY=false
